pp2/y.output
Terminals which are not used

   T_Bool
   T_Int
   T_Double
   T_String
   T_Class
   T_LessEqual
   T_GreaterEqual
   T_Equal
   T_NotEqual
   T_Dims
   T_And
   T_Or
   T_Null
   T_Extends
   T_This
   T_Interface
   T_Implements
   T_While
   T_For
   T_If
   T_Else
   T_Return
   T_Break
   T_New
   T_NewArray
   T_Print
   T_ReadInteger
   T_ReadLine
   T_Identifier
   T_StringConstant
   T_IntConstant
   T_DoubleConstant
   T_BoolConstant


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: T_Void


Terminals, with rules where they appear

$end (0) 0
error (256)
T_Void (258) 4
T_Bool (259)
T_Int (260)
T_Double (261)
T_String (262)
T_Class (263)
T_LessEqual (264)
T_GreaterEqual (265)
T_Equal (266)
T_NotEqual (267)
T_Dims (268)
T_And (269)
T_Or (270)
T_Null (271)
T_Extends (272)
T_This (273)
T_Interface (274)
T_Implements (275)
T_While (276)
T_For (277)
T_If (278)
T_Else (279)
T_Return (280)
T_Break (281)
T_New (282)
T_NewArray (283)
T_Print (284)
T_ReadInteger (285)
T_ReadLine (286)
T_Identifier (287)
T_StringConstant (288)
T_IntConstant (289)
T_DoubleConstant (290)
T_BoolConstant (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
Program (38)
    on left: 1, on right: 0
DeclList (39)
    on left: 2 3, on right: 1 2
Decl (40)
    on left: 4, on right: 2 3


state 0

    0 $accept: . Program $end

    T_Void  shift, and go to state 1

    Program   go to state 2
    DeclList  go to state 3
    Decl      go to state 4


state 1

    4 Decl: T_Void .

    $default  reduce using rule 4 (Decl)


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


state 3

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    Decl  go to state 6


state 4

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 5

    0 $accept: Program $end .

    $default  accept


state 6

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)
